k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ricedata-app-shivam-deployment
  namespace: kubernetes-cluster-shivam
  labels:
    app: ricedata-shivam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ricedata-shivam
  template:
    metadata:
      labels:
        app: ricedata-shivam
    spec:
      containers:
        - name: ricedata-shivam
          image: nagpshivam/ricedata:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
