k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-shivam
  namespace: kubernetes-cluster-shivam
spec:
  type: LoadBalancer
  selector:
    app: backend-shivam
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
